package com.yangsx95.proxy.dynamic;

public interface Subject {
    void request();
}
